tooling/nargo_cli/tests/snapshots/execution_success/traits_in_crates_1/execute__tests__force_brillig_false_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "field"
        },
        "visibility": "public"
      }
    ],
    "return_type": null,
    "error_types": {}
  },
  "bytecode": "H4sIAAAAAAAA/62QQQqAMAwErfigpEna5OZXWmz//wQRI5TiTQfC5jQsG5ab4Dezeu6e8A0cXQSJueXYkLBAtKoCLDUpKorKEZWoKWu2ahkMmRp2MeouC//1KpdrG7ZYpv9tm4cToX2ibUQBAAA=",
  "debug_symbols": "jZBNCoMwEIXvMmsXSUUoXqUUiXGUQEjCmAhFvHtHMVUXLV3Nz5tvHrwZOmzT0BjX+xHqxwwtGWvN0FivVTTe8XZeCshjEwmRV3DSmQqK0EWoXbK2gEnZtB2NQbmtRkWsigLQdVz5YW8srt1SHLT4jkpR7rCUB15defmDl/fMlyde/u1/qz58efF/8qS0oUtiIKBezyZFRrUW9xT75PQp1PgKWcmxB/Iau0S4vts0NngD",
  "file_map": {
    "50": {
      "source": "use crate1::MyTrait;\n\nfn main(x: Field, y: pub Field) {\n    let mut V = crate2::MyStruct { Q: x };\n    V.Add10();\n    assert(V.Q == y);\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": []
}
